--- a/templates/binary.html
+++ b/templates/binary.html
@@ -13,15 +13,13 @@
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{# {% set imgBulbOn = staticOn %} #}
-{% set imgBulbOn = staticOn %}
-{% set imgBulbOff = staticOff %}
+{% set imgBulbOn = "/static/assets/bulb_on.gif" %}
+{% set imgBulbOff = "/static/assets/bulb_off.png" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
 {% block body %}
 <title>Binary page</title>
-<!-- Michael here, I want to figure out how to change the color dynamically via our hex code input -->
 <style>
     body {
         background-color: mediumpurple;
@@ -50,8 +48,7 @@
     // DOM assigment to ASCII conversion
     let ascii = String.fromCharCode(parseInt(parseInt(binary, 2).toString(10)));
     document.getElementById('ASCII').innerHTML = ascii;
-    // RGB - ty justin + anthony
-    document.getElementById('RGB').innerHTML = '#' + parseInt(binary, 2).toString(16).toString()
+    // RGB
 
    // let rgb = parseInt(binary, 2);
    //     let r = rgb >> 16 & 0xFF;
@@ -88,13 +85,13 @@
       //alert("Digit action: " + i );
       const dig = document.getElementById('digit' + i), image = document.getElementById('bulb' + i),
           butt = document.getElementById('butt' + i);             // Change digit and visual
-    if (image.src.match("{{ staticOn }}")) {
+    if (image.src.match("{{ imgBulbOn }}")) {
       dig.value = 0;
-      image.src = "{{ staticOff }}";
+      image.src = "{{ imgBulbOff }}";
       butt.innerHTML = "{{ msgTurnOn }}";
     } else {
       dig.value = 1;
-      image.src = "{{ staticOn }}";
+      image.src = "{{ imgBulbOn }}";
       butt.innerHTML = "{{ msgTurnOff }}";
     }
     // Binary numbers
@@ -143,12 +140,6 @@
     <input style="font-family:'Vladimir Script'; font-size:15px" type="submit" value="Go!">
 </form>
 
-    <form class="text-center" action="/binary/" id="staticOn" method="POST" >
-        <label for="staticOn">Dog or Cat?</label>
-        <input name="staticOn">
-        <input style="font-family:'Vladimir Script'; font-size:15px" type="submit" value="Go!">
-    </form>
-
 <div class="container">
   <div class="row justify-content-md-center">
 
@@ -172,7 +163,7 @@
         <td id="hexadecimal">0</td>
         <td id="decimal">0</td>
         <td id="ASCII">0</td>
-        <td id="RGB">#0</td>
+        <td id="RGB"></td>
         <!-- Hack: display ASCII printable character(s)  -->
         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
@@ -199,8 +190,6 @@
 
   </div>
 </div>
-
-
 {% endblock %}
 
 {% block background %}
