--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -30,6 +30,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href={{ url_for('binary') }}>Binary</a>
                     <a class="dropdown-item" href={{ url_for('binary2') }}>Binary2</a>
                     <a class="dropdown-item" href={{ url_for('planner') }}>Planner</a>
+                    <a class="dropdown-item" href={{ url_for('planner') }}>rgb</a>
                 </div>
             </li>
         </ul>
