added michaelrgb.html and attached files/directories

--- a/templates/README.html
+++ b/templates/README.html
@@ -1,4 +1,4 @@
-<!-- Extending the predefined project layout -->
+<!-- Extendrgb.htmling the predefined project layout -->
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
