--- a/templates/michael.html
+++ b/templates/michael.html
@@ -27,6 +27,10 @@
         <br>
         <p>Here is my minilab for binary.html:</p>
         <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('binary') }}>binary.html</a>
+        <br>
+        <p>Here is my minilab for RGB:</p>
+        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('michaelrgb') }}>michaelrgb.html</a>
+        <p>Note, it takes a while for the html to load due to the file sizes of the images</p>
     </div>
 {% endblock %}
 
