added anirudhrgb.html with photos and added link to own page

--- a/templates/anirudhrgb.html
+++ b/templates/anirudhrgb.html
@@ -14,7 +14,7 @@
     </script>
     <title>RGB starter</title>
 
-    <h1 class="text-center">RGB values within an Image</h1>
+    <h1 class="text-center"> Anirudh's RGB values within an Image</h1>
     <div class="container">
         <div class="row justify-content-md-center">
             <table class="table">
