--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -24,8 +24,11 @@
                 <input type="submit" value="Greetings!">
             </form>
         </div>
-        <a href={{ url_for('binary2') }}>Binary2 Progess</a>
-    </div>
+        <p>Here is my binary work:</p>
+        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('binary2') }}>Binary2 Progress</a>
+        <br>
+        <p>Here is my RGB page:</p>
+        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('anirudhrgb') }}>AnirudhRGB</a>
 {% endblock %}
 
 {% block background %}
