a hint in about.html and just reformatted navbar.html

--- a/templates/About.html
+++ b/templates/About.html
@@ -17,6 +17,7 @@
     <br>
     <h1>About Us</h1>
     <br>
+    <!-- TRY THIS https://stackoverflow.com/questions/42051528/how-do-i-make-an-image-clickable TY -->
     <div class="container">
         <div class="row justify-content-center" style="text-align: center">
             <div class="col align-self-start">
