--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -13,6 +13,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                <!-- commenting out these lines for the moment-->
                 <!-- stub is shown using the name of the route -->
                 <!--<a class="nav-link" href={>{ url_for('index') }}>Portfolio -->
+                <a class="nav-link" href={{ url_for('planner') }}>Planner</a>
                 <a class="nav-link" href={{ url_for('README') }}>README</a>
                 <a class="nav-link" href={{ url_for('About') }}>About</a>
             <li>
@@ -29,7 +30,6 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <a class="dropdown-item" href="https://github.com/NastyEthan/flask_portfolio/commit/6e82d0aa8279dfd8a3a561c14f798c67f4d6bdd7" target="_blank">Greet Commit</a>
                     <a class="dropdown-item" href={{ url_for('binary') }}>Binary</a>
                     <a class="dropdown-item" href={{ url_for('binary2') }}>Binary2</a>
-                    <a class="dropdown-item" href={{ url_for('planner') }}>Planner</a>
                 </div>
             </li>
         </ul>
