Created rgbjames.html and added to main.py a route to rgb.james.html. On james.html created the minilab for RGB for rgbjames.html that shows on the About page.

--- a/templates/james.html
+++ b/templates/james.html
@@ -12,19 +12,21 @@
     </div>
 
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Poor Richard',serif;">
-
+        <p>Here is my minilab for RGB:
+            <a style="font-family: 'Poor Richard'; color: antiquewhite" href={{ url_for('jamesrgb') }}>jamesrgb.html</a> <br>
+            Note, it takes a while for the html to load due to the file sizes of the images</p>
         <div class="col-12">
             <p style="font-family:'Poor Richard'; font-size:100px; color: #1da1f2" > Hello, {{name}}!</p>
         </div>
-
         <div class="col-12">
             <form action="/james/" id="greet" method="POST" >
                 <label for="name" ;  <p style="font-family:'Poor Richard'; font-size:25px; color: #1da1f2">Type a greeting name</label>
                 <input name="name" id="name">
                 <input type="submit" value="Greetings!">
-            </form>
-        </div>
+
+        </form>
         <a href={{ url_for('binary2') }}>Binary2 Progess</a>
+        <br>
     </div>
 {% endblock %}
 
