--- a/templates/michaelrgb.html
+++ b/templates/michaelrgb.html
@@ -25,6 +25,18 @@
     <title>Michael RGB</title>
 
     <h1 class="text-center">Michael's RGB values within an Image</h1>
+
+    <div class="text-center">
+        <form action="{{ url_for('michaelrgb') }}" method="POST">
+            <label>Would you like to add text to the images?</label>
+            <input type="radio" id="yes" name="option" value="yes">
+            <label for="yes">Yes</label><br>
+            <input type="radio" id="no" name="option" value="no">
+            <label for="no">No</label><br>
+            <input type="submit">
+        </form>
+    </div>
+
     <div class="container">
         <div class="row justify-content-md-center">
             <table class="table">
@@ -89,4 +101,5 @@
 
         </div>
     </div>
+
 {% endblock %}
