rgb hack 2 complete?

--- a/templates/michaelrgb.html
+++ b/templates/michaelrgb.html
@@ -27,8 +27,8 @@
     <h1 class="text-center">Michael's RGB values within an Image</h1>
 
     <div class="text-center">
+        <p>Would you like to add text to the images?</p>
         <form action="{{ url_for('michaelrgb') }}" method="POST">
-            <label>Would you like to add text to the images?</label>
             <input type="radio" id="yes" name="option" value="yes">
             <label for="yes">Yes</label><br>
             <input type="radio" id="no" name="option" value="no">
