--- a/templates/About.html
+++ b/templates/About.html
@@ -21,16 +21,16 @@
     <div class="container">
         <div class="row justify-content-center" style="text-align: center">
             <div class="col align-self-start">
-                <img src="/static/assets/michaelprofile.gif" alt="Michael's picture" style="width: 200px; height: 200px;" >
+                <a href={{ url_for('michael') }}><img src="/static/assets/michaelprofile.jpg" alt="Michael's picture" style="width: 200px; height: 200px; object-fit: cover" ></a>
             </div>
             <div class="col align-self-start">
-                <img src="/static/assets/ethanprofile.jpg" alt="Ethan's picture" style="width: 200px; height: 200px;">
+                <a href={{ url_for('ethan') }}><img src="/static/assets/ethanprofile.jpg" alt="Ethan's picture" style="width: 200px; height: 200px; object-fit: cover"></a>
             </div>
             <div class="col align-self-start">
-                <img src="/static/assets/anirudhprofile.jpg" alt="Anirudh's picture" style="width: 200px; height: 200px;">
+                <a href={{ url_for('anirudh') }}><img src="/static/assets/anirudhprofile.jpg" alt="Anirudh's picture" style="width: 200px; height: 200px; object-fit: cover "></a>
             </div>
             <div class="col align-self-start">
-                <img src="/static/assets/jamesprofile.jpg" alt="James's picture" style="width: 200px; height: 200px;">
+                <a href={{ url_for('james') }}><img src="/static/assets/jamesprofile.jfif" alt="James's picture" style="width: 200px; height: 200px; object-fit:cover"></a>
             </div>
         </div>
         <div class="row justify-content-center" style="text-align: center">
