--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="col-12">
-            <form action="/anirudh/" id="greet" method="POST" >
+            <form action="{{ url_for('anirudh') }}" id="greet" method="POST" >
                 <label for="name">Type a greeting name</label>
                 <input name="name" id="name">
                 <input type="submit" value="Greetings!">
@@ -29,6 +29,7 @@
         <br>
         <p>Here is my RGB page:</p>
         <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('anirudhrgb') }}>AnirudhRGB</a>
+    </div>
 {% endblock %}
 
 {% block background %}
