--- a/templates/michaelrgb.html
+++ b/templates/michaelrgb.html
@@ -30,9 +30,10 @@
         <p>Would you like to add text to the images?</p>
         <form action="{{ url_for('michaelrgb') }}" method="POST">
             <input type="radio" id="yes" name="option" value="yes">
-            <label for="yes">Yes</label><br>
+            <label for="yes">Yes</label>
             <input type="radio" id="no" name="option" value="no">
-            <label for="no">No</label><br>
+            <label for="no">No</label>
+            <br>
             <input type="submit">
         </form>
     </div>
