--- a/templates/ethanrgb.html
+++ b/templates/ethanrgb.html
@@ -20,6 +20,19 @@
     <title>RGB starter</title>
 
     <h1 class="text-center">Ethan's RGB values within an Image</h1>
+
+    <div class="text-center">
+        <p>Would you like to change the image size to (420,69)?</p>
+        <form action="{{ url_for('ethanrgb') }}" method="POST">
+            <input type="radio" id="yes" name="option" value="yes">
+            <label for="yes">Yes</label>
+            <input type="radio" id="no" name="option" value="no">
+            <label for="no">No</label>
+            <br>
+            <input type="submit">
+        </form>
+    </div>
+
     <div class="container">
         <div class="row justify-content-md-center">
             <table class="table">
