Touched up pages

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -15,7 +15,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <!--<a class="nav-link" href={>{ url_for('index') }}>Portfolio -->
                 <a class="nav-link" href={{ url_for('planner') }}>Planner</a>
                 <a class="nav-link" href={{ url_for('README') }}>README</a>
-                <a class="nav-link" href={{ url_for('about') }}>About</a>
+                <a class="nav-link" href={{ url_for('nasty') }}>Nasty</a>
             <li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
