--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -30,7 +30,7 @@
         <p style="font-family:'Shree Devanagari 714'; font-size:69px" > Ethan Vo</p>
     </div>
 
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family:'Shree Devanagari 714';font-size:20px">
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family:'Shree Devanagari 714'; font-weight: 900; font-size:20px; color: antiquewhite">
 
         <div class="col-12">
             <p>Hello, {{name}}! This is my about page</p>
@@ -43,7 +43,7 @@
                 <input type="submit" value="Greetings!">
             </form>
         </div>
-        <a href={{ url_for('binary') }}>Binary Progess</a>
+        <a style="color:antiquewhite"; href={{ url_for('binary') }}>Binary Progess</a>
         <br>
         <p>Here is my minilab for RGB:
             <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('ethanrgb') }}>ethanrgb.html</a> <br>
