--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -15,7 +15,7 @@
         }
     </style>
     <br>
-    <h1>About Us</h1>
+    <h1>Nasty: About Us</h1>
     <br>
     <!-- TRY THIS https://stackoverflow.com/questions/42051528/how-do-i-make-an-image-clickable TY -->
     <div class="container">
