--- a/templates/planner.html
+++ b/templates/planner.html
@@ -9,16 +9,23 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <!-- FONTS -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cutive Mono"> <!-- a monospace -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue"> <!-- https://fonts.google.com/specimen/Bebas+Neue?category=Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret One"> <!-- https://fonts.google.com/specimen/Poiret+One?category=Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton"> <!-- https://fonts.google.com/specimen/Monoton?category=Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka the Great"> <!-- https://fonts.google.com/specimen/Fredericka+the+Great?category=Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Forum"> <!--https://fonts.google.com/specimen/Forum?category=Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <style>
         p {
-            font-family: "Roboto Mono Light for Powerline";
+            font-family: Raleway;
         }
         body {
             background-color: antiquewhite;
         }
         h1 {
-            font-family: 'fangsong';
+            font-family: Forum;
             font-size: 90px;
         }
 
@@ -34,10 +41,7 @@
     <p>This will be where we will build the main project - <b>a daily planner with alarms for tests, homework, etc.</b></p>
 
     <!-- button that leads to the repo, can style the button in css above -->
-    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender </a>
-    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Tests </a>
-    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Homework and Timing </a>
-    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Alarms </a>
+    <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender (currently leads to github repo)</a>
 
 </div>
 </body>
