--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
 {% set project = "About" %}
     <style>
         h1 {
-            font-family: Bahnschrift;
+            font-family: "Bebas Neue";
             text-align: center;
             font-size:80px
         }
