--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -13,6 +13,11 @@
             text-align: center;
             font-size:80px
         }
+        h2 {
+            font-family: "Bebas Neue";
+            text-align: center;
+            font-size:69px
+        }
         p {
             font-family: "Raleway"
         }
@@ -75,7 +80,7 @@
     </div>
     <br>
     <br>
-    <h1 class="text-center">Journals</h1>
+    <h2 class="text-center">Journals</h2>
     <div class="container"></div>
         <div class="row justify-content-md-center" style="text-align: center; width: 100%">
             <div class="col-2">
@@ -86,5 +91,15 @@
             </div>
         </div>
     </div>
+    <br>
+    <h2 class="text-center">Important Links</h2>
+    <div class="container"></div>
+        <div class="row justify-content-md-center" style="text-align: center; width: 100%">
+            <div class="col-2">
+                <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">REPOSITORY</a>
+            </div>
+        </div>
+    </div>
+
 
 {% endblock %}
