changed fonts to ones imported in base.html

--- a/templates/anirudh.html
+++ b/templates/anirudh.html
@@ -7,14 +7,13 @@
 {% set repo = "https://github.com/NastyEthan/flask_portfolio" %}
 
 {% block body %}
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Wide Latin',serif;">
-        <p style="font-family:'sans-serif '; font-size:150px; color: #2b425b" > Anirudh Ramachandran</p>
-    </div>
-
     <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+        <p style="font-family:'Bebas Neue'; font-size:120px" > Anirudh Ramachandran</p>
+    </div>
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: Raleway,serif;">
 
         <div class="col-12">
-            <p style="font-family:'Vladimir Script'; font-size:100px" > Hello, {{name}}!</p>
+            <p style="font-family:'Raleway'; font-size:100px" > Hello, {{name}}!</p>
         </div>
 
         <div class="col-12">
@@ -25,10 +24,10 @@
             </form>
         </div>
         <p>Here is my binary work:</p>
-        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('binary2') }}>Binary2 Progress</a>
+        <a style="font-family: 'Raleway'; color: antiquewhite" href={{ url_for('binary2') }}>Binary2 Progress</a>
         <br>
         <p>Here is my RGB page:</p>
-        <a style="font-family: 'fangsong'; color: antiquewhite" href={{ url_for('anirudhrgb') }}>AnirudhRGB</a>
+        <a style="font-family: 'Raleway'; color: antiquewhite" href={{ url_for('anirudhrgb') }}>AnirudhRGB</a>
     </div>
 {% endblock %}
 
