--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -27,6 +27,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka the Great"> <!-- https://fonts.google.com/specimen/Fredericka+the+Great?category=Display -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Forum"> <!--https://fonts.google.com/specimen/Forum?category=Display -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kurale">   <!--https://fonts.google.com/specimen/Kurale= Display -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Birthstone">   <!--https://fonts.google.com/specimen/Birthstone= Display -->
 
     <style>
         :root{
