--- a/templates/jamesrgb.html
+++ b/templates/jamesrgb.html
@@ -5,31 +5,15 @@
 
 
 <script>
-    var imageColor = 0; // 0 is color, 1 is gray
-    var grayscale = {{ grayed|safe }};  // passes in base64 urls in a list into javascript via jinja
-    var colorscale = {{ colored|safe }};
-
-    function toggleColors(array) {  // toggles color of each image in the document
-        for (var i = 1; i <= array.length; i++) {
-            let id = "img" + i; // for each image in the array, set the source (href) to the base64 version
-            setImg(id, array[i-1]);
+    function changeImage() {
+        if(document.getElementById("img1").src == document.getElementById('img_orig1').innerHTML){
+            document.getElementById('img1').src = document.getElementById('img_gray1').innerHTML;
+        }
+        else {
+            document.getElementById('img1').src = document.getElementById('img_orig1').innerHTML;
         }
     }
 
-    function toggle() {  // calls toggleColors based on what the current color is
-        if (imageColor == 0) {
-            toggleColors(grayscale);
-            imageColor = 1;
-        } else {
-            toggleColors(colorscale);
-            imageColor = 0;
-        }
-    }
-
-    function setImg(img, base64) {
-        // add button and rotate image from original to gray and back (toggle)
-        document.getElementById(img).src = base64;  //change img src to inner html on <p> tag
-    }
 
     // Hack: add java script function to toggle image from original to gray and back (toggle)
     //  document.getElementById("img<n>").src
@@ -45,8 +29,8 @@
 {% block content %}
 <h1 style="color: lightseagreen" class="text-center">RGB values within an Image</h1>
 <div class="container">
-    <button style="background-color: lightpink; border-color: rebeccapurple; color: mediumblue"
-            onclick="toggle()">Toggle Colors!</button>
+<!--    <button style="background-color: lightpink; border-color: rebeccapurple; color: mediumblue"-->
+<!--            onclick="toggle()">Toggle Colors!</button>-->
     <div class="row justify-content-md-center">
         <table class="table">
             <thead>
@@ -73,6 +57,8 @@
                        {{image.base64}}  original image
                        {{image.base64_GRAY}}  gray scale image
                     -->
+                    <button style="background-color: lightpink; border-color: rebeccapurple; color: mediumblue" onclick="changeImage()">Toggle Colors!</button>
+
                     <p hidden id="img_orig{{loop.index}}">{{image.base64}}</p>
                     <p hidden id="img_gray{{loop.index}}">{{image.base64_GRAY}}</p>
                 </td>
