--- a/templates/binary.html
+++ b/templates/binary.html
@@ -99,7 +99,34 @@
     setConversions(binary);
   }
 
-  //ASCII STUFFS
+  // SHIFT HACK
+  function shift(n) {
+      let binary = getBits();
+      // convert to decimal and do math
+      let decimal = parseInt(binary, 2);
+      if (n > 0) {  // PLUS
+          decimal = MAX === decimal ? 0 : decimal *= n; // OVERFLOW or PLUS
+      } else  {     // MINUS
+          decimal = 0 === decimal ? MAX : decimal /= n; // OVERFLOW or MINUS
+      }
+      // convert the result back to binary
+      binary = decimal_2_base(decimal, 2);
+      // update conversions
+      setConversions(binary);
+      // ascii?
+      // update bits
+      for (let i = 0; i < binary.length; i++) {
+          let digit = binary.substr(i, 1);
+          document.getElementById('digit' + i).value = digit;
+          if (digit === "1") {
+              document.getElementById('bulb' + i).src = "{{ imgBulbOn }}";
+              document.getElementById('butt' + i).innerHTML = "{{ msgTurnOff }}";
+          } else {
+              document.getElementById('bulb' + i).src = "{{ imgBulbOff }}";
+              document.getElementById('butt' + i).innerHTML = "{{ msgTurnOn }}";
+          }
+      }
+  }
 
   // add is positive integer, subtract is negative integer
   function add(n) {
@@ -146,6 +173,7 @@
     <div class="col-8">
       <table class="table">
       <tr id="table">
+        <th>Shift Left</th>
         <th>Plus</th>
         <th>Binary</th>
         <th>Octal</th>
@@ -155,8 +183,10 @@
         <th>RGB</th>
         <!-- Hack: display ASCII label for printable character(s)  -->
         <th>Minus</th>
+        <th>Shift Right</th>
       </tr>
       <tr>
+        <td><button type="button" id="shiftL" onclick="shift(2)"><<</button></td>
         <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
         <td id="binary">00000000</td>
         <td id="octal">0</td>
@@ -166,6 +196,7 @@
         <td id="RGB"></td>
         <!-- Hack: display ASCII printable character(s)  -->
         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
+        <td><button type="button" id="shiftR" onclick="shift(1/2)">>></button></td>
 
       </tr>
       </table>
