--- a/templates/planner.html
+++ b/templates/planner.html
@@ -43,6 +43,7 @@
     <!-- button that leads to the repo, can style the button in css above -->
     <a href="https://github.com/NastyEthan/flask_portfolio" target="_blank" class="btn">Schedule and Calender (currently leads to github repo)</a>
 
+    <div class="container"></div>
 </div>
 </body>
 
