--- a/templates/nasty.html
+++ b/templates/nasty.html
@@ -18,6 +18,9 @@
             text-align: center;
             font-size:69px
         }
+        html, body {
+            background-color: cadetblue;
+        }
         p {
             font-family: "Raleway"
         }
