--- a/templates/ethan.html
+++ b/templates/ethan.html
@@ -26,11 +26,11 @@
 {% endblock %}
 
 {% block body %}
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
-        <p style="font-family:'Shree Devanagari 714'; font-size:69px" > Ethan Vo</p>
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: 'Poiret One',serif;">
+        <p style="font-family:'Poiret One'; font-size:69px" > Ethan Vo</p>
     </div>
 
-    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family:'Shree Devanagari 714'; font-weight: 900; font-size:20px; color: antiquewhite">
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family:'Railway'; font-weight: 900; font-size:20px; color: antiquewhite">
 
         <div class="col-12">
             <p>Hello, {{name}}! This is my about page</p>
